fix: properly align top cards

--- a/src/app/components/cards/news-card/news-card.component.scss
+++ b/src/app/components/cards/news-card/news-card.component.scss
@@ -9,7 +9,6 @@ $component: 'cmp-news-card';
 
 @include cmp-base($component) {
     @include linear-fade-out();
-    margin-top: 10px;
 
     &__headline {
         @include use-font(light);
