--- a/src/app/components/cards/time-card/time-card.component.scss
+++ b/src/app/components/cards/time-card/time-card.component.scss
@@ -12,6 +12,7 @@ $component: 'cmp-time-card';
         height: 35px;
         font-size: 30px;
         font-variant: tabular-nums;
+        line-height: 22px;
         text-align: right;
     }
 
