--- a/src/app/components/cards/weather-card/weather-card.component.scss
+++ b/src/app/components/cards/weather-card/weather-card.component.scss
@@ -7,8 +7,6 @@ $component: 'cmp-weather-card';
 }
 
 @include cmp-base($component) {
-    padding-top: 35px;
-
     &__current {
         display: grid;
         grid-template-columns: 1fr auto;
@@ -24,6 +22,7 @@ $component: 'cmp-weather-card';
         margin-right: 20px;
         font-size: 95px;
         font-variant: tabular-nums;
+        line-height: 70px;
     }
 
     &__feels-like {
